--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,14 @@
         <version>3.5.7</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
+    <repositories>
+        <repository>
+            <id>central</id>
+            <url>https://repo.maven.apache.org/maven2</url>
+        </repository>
+    </repositories>
+
     <groupId>cvtc.edu.hooked</groupId>
     <artifactId>hooked</artifactId>
     <version>0.0.1-SNAPSHOT</version>
@@ -44,6 +52,13 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.51.0.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
