--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
          version="5.0">
 
     <welcome-file-list>
-        <welcome-file>IndexServlet</welcome-file>
+        <welcome-file>WEB-INF/classes/templates/index.jsp</welcome-file>
     </welcome-file-list>
 
     <servlet>
