--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,12 +5,12 @@
          version="5.0">
 
     <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
+        <welcome-file>WEB-INF/classes/templates/index.jsp</welcome-file>
     </welcome-file-list>
 
     <servlet>
         <servlet-name>IndexServlet</servlet-name>
-        <servlet-class>controllers.TestServlet</servlet-class>
+        <servlet-class>controllers.IndexServlet</servlet-class>
     </servlet>
 
     <servlet-mapping>
