--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,12 +9,11 @@
     </welcome-file-list>
 
     <servlet>
-        <servlet-name>TestServlet</servlet-name>
-        <servlet-class>edu.cvtc.hooked.controller.TestServlet</servlet-class>
+        <servlet-name>IndexServlet</servlet-name>
+        <servlet-class>edu.cvtc.hooked.controller.IndexServlet</servlet-class>
     </servlet>
-
     <servlet-mapping>
-        <servlet-name>TestServlet</servlet-name>
+        <servlet-name>IndexServlet</servlet-name>
         <url-pattern>/IndexServlet</url-pattern>
     </servlet-mapping>
 
